--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <div id="MetaMaskButton" style="margin:10px;width:auto;background:gray;height:50px;cursor:pointer;">Connect MetaMask</div>
+    <button id="MetaMaskButton" class="btn greenBtn">Connect MetaMask</button>
+    <button id="MMsendToAddress" class="btn greenBtn">You need to connect first!</button>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
