added swapping support. right now swaps 0.1 AVAX to LINK on FUJI

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     <div id="root"></div>
     <button id="MetaMaskButton" class="btn greenBtn">Connect MetaMask</button>
     <button id="MMsendToAddress" class="btn greenBtn">You need to connect first!</button>
+    <button id="MMswap" class="btn greenBtn">You need to connect first!</button>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
